<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <include layout="@layout/content_events" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.tonyk.promac.Events">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="689dp">


                <SearchView
                    android:id="@+id/eventsSearch"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="#24000000"
                    android:queryHint="@string/eventsSearchField"
                    app:layout_constraintBottom_toTopOf="@+id/listView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ListView
                    android:id="@+id/listView"
                    style="@style/ListView"
                    android:layout_width="340dp"
                    android:layout_height="360dp"
                    android:layout_marginBottom="120dp"
                    android:background="@color/transp"
                    android:backgroundTint="#f0ffff"
                    android:drawSelectorOnTop="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabOpenEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:src="@drawable/ic_add_white_36dp"
                android:theme="@style/Theme.Design.Light" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabEventsToMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginEnd="90dp"
                android:src="@drawable/ic_dashboard_white_24dp"
                android:theme="@style/Theme.Design.Light"
                android:visibility="invisible" />

        </android.support.design.widget.CoordinatorLayout>

    </RelativeLayout>

</RelativeLayout>